Implement posterior for noisy training data

--- a/gpr/GPsForDummies.ipynb
+++ b/gpr/GPsForDummies.ipynb
@@ -302,6 +302,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For hyperparameters $\\theta$ one can show that  \n",
+    "$$ \\frac{\\partial}{\\partial \\theta_j} \\text{log}~ p(y|X) = \\frac{1}{2} y^T \\Sigma_y^{-1} \\frac{\\partial \\Sigma_y}{\\partial \\theta_j} \\Sigma_y^{-1} y - \\frac{1}{2} \\text{tr} (\\Sigma_y^{-1} \\frac{\\partial \\Sigma_y}{\\partial \\theta_j})$$\n",
+    "$$ = \\frac{1}{2} \\text{tr} (( \\alpha\\alpha^T - \\Sigma_y^{-1}) \\frac{\\partial \\Sigma_y}{\\partial \\theta_j})$$  \n",
+    "with $\\alpha = \\Sigma_y^{-1}y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# References\n",
     "\n",
     " [1] Jochen  Görtler,  Rebecca  Kehlbeck,  and  Oliver  Deussen.   A  visual  exploration  of gaussian processes. Distill, 4:e17, 2019.  \n",
